--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+body{
+    color: white;
+    text-align: center;
+}
+
 .mainbit {
     background-color: black;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
 }
