--- a/style.css
+++ b/style.css
@@ -14,7 +14,39 @@ body{
     position: absolute;
     top: 50%;
     left: 50%;
-    margin-right: -50%;
     transform: translate(-50%, -50%);
     font-size: large;
+}
+
+.sillybio {
+    padding-bottom: 14px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.socials {
+    border-top: 2px solid lightblue;
+    padding: 10px;
+}
+
+.teto {
+    animation: tetoshake 5s infinite;
+}
+
+@keyframes tetoshake {
+    0%  {
+        transform: skew(0deg) translateX(0px);
+    }
+    25%  {
+        transform: skew(5deg) translateX(-10px);
+    }
+    50%  {
+        transform: skew(0deg) translateX(0px);
+    }
+    75%  {
+        transform: skew(-5deg) translateX(10px);
+    }
+    100%  {
+        transform: skew(0deg) translateX(0px);
+    }
 }
